fixed map covering part of toolbar and improved map ux

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   display: grid;
-  grid-template-rows: 6vh 94vh;
+  grid-template-rows: 100vh;
   grid-template-areas:
-    "header"
     "main";
 }
 
@@ -32,11 +31,11 @@
 .Left-panel {
   grid-area: leftpanel;
   overflow: auto;
-  height: 94vh;
+  height: 100vh;
   padding: 0 30px 0 0;
 }
 
 .Right-panel {
   grid-area: rightpanel;
-  height: 94vh;
+  height: 100vh;
 }
